scripts/nullaway/original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8.txt
../original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/hijri/HijriCalculator.java:54: error: [NullAway] @NonNull field HijriCalculator$sDate.units not initialized
		    String units;	/* Units used to denote before/after epoch */
		           ^
    (see http://t.uber.com/nullaway )
../original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/hijri/HijriNames.java:8: error: [NullAway] @NonNull static field instance not initialized
	private static HijriNames instance;
	                          ^
    (see http://t.uber.com/nullaway )
../original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/prayer/Method.java:282: error: [NullAway] initializer method does not guarantee @NonNull fields round (line 190), mathhab (line 191), extremeLatitude (line 193) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	protected Method() {
	          ^
    (see http://t.uber.com/nullaway )
../original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/prayer/TimeNames.java:8: error: [NullAway] @NonNull static field instance not initialized
	private static TimeNames instance;
	                         ^
    (see http://t.uber.com/nullaway )
4 errors
